# instruct_vault

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VISION_DOC.md  action.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  integration_request.md
.github/workflows/: ci.yml  prompt-checks.yml  release.yml  semantic-release.yml
benchmarks/: README.md  run.py  test_perf.py
docs/: adoption.md  audit_logging.md  ci.md  cookbooks.md  dropin_guide.md  editor_setup.md  governance.md  lint.md  lockfiles_and_judge.md  performance.md  playground.md  release_checklist.md  roadmap.md  spec.md  stability.md  vision.md  why_instructvault.md
docs/ci_templates/: Jenkinsfile  gitlab-ci.yml
docs/templates/: CODEOWNERS
examples/datasets/: classifier_cases.jsonl  rag_agent_cases.jsonl  rag_answer_cases.jsonl  support_cases.jsonl
examples/ivault_demo_template/: Makefile  README.md  app.py
examples/ivault_demo_template/prompts/: support_reply.prompt.yml
examples/llamaindex_demo/: README.md  app.py
examples/llamaindex_demo/prompts/: support_reply.prompt.yml
examples/notebooks/: instructvault_colab.ipynb  instructvault_openai_colab.ipynb  instructvault_rag_colab.ipynb
examples/policies/: policy_example.py  policy_pack.py
examples/prompts/: classifier.prompt.yml  guardrail.prompt.json  hello_world.prompt.yml  judged_summary.prompt.yml  rag_agent.prompt.yml  rag_answer.prompt.yml  support_reply.prompt.yml
playground/: README.md  pyproject.toml
playground/ivault_playground/: __init__.py  app.py
playground/ivault_playground/routes/: api.py  ui.py
playground/ivault_playground/static/: app.css  app.js
playground/ivault_playground/templates/: index.html
schemas/: prompt.schema.json
src/instructvault/: __init__.py  bundle.py  cli.py  diff.py  eval.py  io.py  judge.py  junit.py  lint.py  lock.py  policy.py  providers.py  render.py  result.py  scaffold.py  schema.py  sdk.py  spec.py  store.py
tests/: test_adapters.py  test_cli_basic.py  test_eval_asserts.py  test_features.py  test_hardening.py  test_judge.py  test_lint.py  test_playground_api.py  test_render_result.py
