[project]
name = "instructvault"
version = "0.6.1"
description = "Git-first prompt registry + CI evals + lightweight runtime SDK (ivault)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name="InstructVault OSS Maintainers"}]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "rich>=13.7",
  "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  # Pinned so the lint/type gate is deterministic and does not break when new
  # rule sets ship in a later release.
  "ruff==0.15.20",
  "mypy==2.2.0",
  "types-PyYAML",
  "httpx>=0.27",
  "fastapi>=0.110",
]
# Optional statistical benchmarking. Not required to run benchmarks/run.py.
# Install with:  pip install -e ".[benchmark]"
benchmark = [
  "pytest-benchmark>=4.0",
]

[project.urls]
Homepage = "https://github.com/05satyam/instruct_vault"
Repository = "https://github.com/05satyam/instruct_vault"

[project.scripts]
ivault = "instructvault.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/instructvault"]

[tool.hatch.build.targets.wheel.force-include]
"src/instructvault/py.typed" = "instructvault/py.typed"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","RUF"]
# E501: line length handled by formatter; B008: Typer intentionally uses
# Option()/Argument() calls as parameter defaults.
ignore = ["E501","B008"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true

# `openai` is an optional, lazily imported provider dependency; the core does
# not depend on it, so its missing stubs must not fail type checking.
[[tool.mypy.overrides]]
module = ["openai", "openai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
