[project]
name = "ivault-playground"
version = "0.1.0"
description = "Minimal playground UI for InstructVault (optional)."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "pydantic>=2.7",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "rich>=13.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ivault_playground"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"
